// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Section/> render properly with passed nodes 1`] = `
<div
  class="StyledSection__Wrapper-tchlt3-0 fHKQdA"
>
  <div>
    <p>
      Lorem ipsum dolor sit
    </p>
  </div>
</div>
`;

exports[`<Section/> render properly with passed props 1`] = `
<div
  class="StyledSection__Wrapper-tchlt3-0 qWwUt"
>
  <div>
    <p>
      Lorem ipsum dolor sit
    </p>
  </div>
</div>
`;
